exports[`(.not).toHavePreconditionFailedStatus > using axios > .not.toHavePreconditionFailedStatus > fails when response have status code 412 1`] = `
<dim>expect(</intensity><red>received</color><dim>).not.toHavePreconditionFailedStatus()</intensity>

Expected status code to not be 412 received:
  <red>412</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 412,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": {}
}
`;

exports[`(.not).toHavePreconditionFailedStatus > using axios > .toHavePreconditionFailedStatus > fails when response have other status code 1`] = `
<dim>expect(</intensity><red>received</color><dim>).toHavePreconditionFailedStatus()</intensity>

Expected status code to be 412 received:
  <red>200</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 200,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": {}
}
`;

exports[`(.not).toHavePreconditionFailedStatus > using got > .not.toHavePreconditionFailedStatus > fails when response have status code 412 1`] = `
<dim>expect(</intensity><red>received</color><dim>).not.toHavePreconditionFailedStatus()</intensity>

Expected status code to not be 412 received:
  <red>412</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 412,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": "{}"
}
`;

exports[`(.not).toHavePreconditionFailedStatus > using got > .toHavePreconditionFailedStatus > fails when response have other status code 1`] = `
<dim>expect(</intensity><red>received</color><dim>).toHavePreconditionFailedStatus()</intensity>

Expected status code to be 412 received:
  <red>200</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 200,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": "{}"
}
`;
